Fixed bug #30832 ("!" stripped off comments in xml parser) reset sax->initialized flag when not using SAX2